// ==========================================
// 1. 使用者與第三方認證 (User & OAuth)
// ==========================================
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  name varchar(100) [not null]
  avatar_url varchar(500)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table oauth_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  provider varchar(50) [not null, default: 'google']
  provider_user_id varchar(255) [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (provider, provider_user_id) [unique]
    user_id
  }
}

// ==========================================
// 2. 標準字典與別名 (Canonical Taxonomy)
// ==========================================
Table canonical_entities {
  id varchar(50) [pk, note: '如: brand_tanqueray, glass_rocks, ing_gin']
  category varchar(50) [not null, note: 'brand, glass, ice, garnish, ingredient']
  name_en varchar(100) [not null]
  name_zh varchar(100)
  default_abv numeric(4, 1)
  created_at timestamp [not null, default: `now()`]

  indexes {
    category
  }
}

Table entity_aliases {
  id uuid [pk, default: `gen_random_uuid()`]
  entity_id varchar(50) [not null]
  alias_text varchar(100) [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    alias_text
    (entity_id, alias_text) [unique]
  }
}

Table flavors {
  id varchar(50) [pk, note: '如: sour, sweet, bitter, herbal']
  name_en varchar(50) [not null]
  name_zh varchar(50) [not null]
}

// ==========================================
// 3. 酒譜核心 (Cocktail Recipes)
// ==========================================
Table recipes {
  id uuid [pk, default: `gen_random_uuid()`]
  author_id uuid [not null]
  
  name_en varchar(150)
  name_zh varchar(150)
  
  base_spirit varchar(50) [not null]
  method varchar(50) [not null]
  
  glass_entity_id varchar(50)
  glass_custom varchar(100)
  
  ice_entity_id varchar(50)
  ice_custom varchar(100)
  
  instructions jsonb [note: '步驟字串陣列: ["步驟一", "步驟二"]']
  
  calculated_abv numeric(4, 1)
  dilution_ratio numeric(4, 2)
  
  image_url varchar(500)
  story text
  
  likes_count integer [not null, default: 0]
  favorites_count integer [not null, default: 0]
  
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    author_id
    base_spirit
    method
    calculated_abv
  }
}

// ==========================================
// 4. 材料關聯 (Recipe Ingredients)
// ==========================================
Table recipe_ingredients {
  id uuid [pk, default: `gen_random_uuid()`]
  recipe_id uuid [not null]
  sort_order integer [not null, default: 0]
  
  ingredient_entity_id varchar(50)
  name varchar(100) [not null]
  
  amount numeric(6, 2) [not null]
  unit varchar(20) [not null]
  abv numeric(4, 1) [not null, default: 0.0]
  
  brand_entity_id varchar(50)
  brand_custom varchar(100)

  indexes {
    recipe_id
    ingredient_entity_id
    brand_entity_id
  }
}

// ==========================================
// 5. 裝飾物 N:N 關聯 (Recipe Garnishes)
// ==========================================
Table recipe_garnishes {
  id uuid [pk, default: `gen_random_uuid()`]
  recipe_id uuid [not null]
  garnish_entity_id varchar(50)
  garnish_custom varchar(100)

  indexes {
    recipe_id
    garnish_entity_id
  }
}

// ==========================================
// 6. 風味多對多 (Recipe Flavors)
// ==========================================
Table recipe_flavors {
  recipe_id uuid [not null]
  flavor_id varchar(50) [not null]

  indexes {
    (recipe_id, flavor_id) [pk]
    flavor_id
  }
}

// ==========================================
// 7. 社群互動 (Likes & Favorites)
// ==========================================
Table recipe_likes {
  user_id uuid [not null]
  recipe_id uuid [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, recipe_id) [pk]
    recipe_id
  }
}

Table recipe_favorites {
  user_id uuid [not null]
  recipe_id uuid [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, recipe_id) [pk]
    user_id
  }
}

// ==========================================
// 8. 關聯設定與連帶刪除行為 (Foreign Keys)
// ==========================================
Ref: oauth_accounts.user_id > users.id [delete: cascade]
Ref: recipes.author_id > users.id [delete: cascade]

Ref: entity_aliases.entity_id > canonical_entities.id [delete: cascade]

Ref: recipes.glass_entity_id > canonical_entities.id [delete: set null]
Ref: recipes.ice_entity_id > canonical_entities.id [delete: set null]

Ref: recipe_ingredients.recipe_id > recipes.id [delete: cascade]
Ref: recipe_ingredients.ingredient_entity_id > canonical_entities.id [delete: set null]
Ref: recipe_ingredients.brand_entity_id > canonical_entities.id [delete: set null]

Ref: recipe_garnishes.recipe_id > recipes.id [delete: cascade]
Ref: recipe_garnishes.garnish_entity_id > canonical_entities.id [delete: set null]

Ref: recipe_flavors.recipe_id > recipes.id [delete: cascade]
Ref: recipe_flavors.flavor_id > flavors.id [delete: cascade]

Ref: recipe_likes.user_id > users.id [delete: cascade]
Ref: recipe_likes.recipe_id > recipes.id [delete: cascade]

Ref: recipe_favorites.user_id > users.id [delete: cascade]
Ref: recipe_favorites.recipe_id > recipes.id [delete: cascade]